# rift

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  3n4quj5aofqdutkagnbhkudfhsgjo6jh.darc  AGENTS.md  Cargo.toml  PROJECT-STATUS.md  README.md  REVIEW-GLM.md  REVIEW-KIMI.md  RIFT_PRESENTATION.md  evnfujomtercgcbomjuogm8vh5kc8p1c.darc  f8skkbunfljpkk3iplid0ubjmcmre1rg.darc  manifest  plflrjhetacd4ba2odbrnekasa2m8ina.darc  refactoring-agent-prompt.md
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.cargo/: mutants.toml
.opencode/plans/: fuse_implementation_plan.md
crates/rift-client/: Cargo.toml  README.md
crates/rift-client/src/: client.rs  fuse.rs  handle.rs  in_flight.rs  known_servers.rs  lib.rs  main.rs  mock_remote.rs  mount.rs  paths.rs  reconnect.rs  remote.rs  view.rs
crates/rift-client/src/cache/: chunks.rs  db.rs  mod.rs
crates/rift-client/tests/: caching.rs  client.rs  common.rs  e2e_fuse_test.rs  fuse_integration.rs  integration_stat_batch.rs  mount_integration.rs  reconnect.rs
crates/rift-common/: Cargo.toml  README.md
crates/rift-common/src/: config.rs  crypto.rs  error.rs  handle_map.rs  lib.rs  test_utils.rs  types.rs
crates/rift-fuse/: Cargo.toml  README.md  RUN_ON_LINUX.md  TESTING.md
crates/rift-fuse/src/: filesystem.rs  lib.rs
crates/rift-fuse/tests/: basic_mount.rs  filesystem.rs
crates/rift-protocol/: Cargo.toml  README.md  build.rs
crates/rift-protocol/src/: codec.rs  lib.rs  messages.rs
crates/rift-server/: Cargo.toml  NEXT-TASKS.md  README.md  REVIEW-BEADS.html  REVIEW.html
crates/rift-server/src/: background_check.rs  cert.rs  config.rs  handle.rs  handler.rs  lib.rs  main.rs  safe_path.rs  security.rs  server.rs
crates/rift-server/src/handler/: attrs.rs  drill.rs  lookup.rs  merkle_cache.rs  merkle_cache_trait.rs  mod.rs  read.rs  readdir.rs  stat.rs
crates/rift-server/src/metadata/: db.rs  merkle.rs  mod.rs
crates/rift-server/src/server/: context.rs  dispatch.rs  mod.rs
crates/rift-server/tests/: server.rs
crates/rift-transport/: Cargo.toml  README.md
crates/rift-transport/src/: connection.rs  error.rs  fingerprint.rs  handshake.rs  lib.rs  listener.rs  policy.rs  quic.rs  tls.rs
crates/rift-transport/tests/: handshake.rs  quic_transport.rs
docs/: CONSISTENCY-ANALYSIS.md  DESIGN-DECISION-READDIR-STAT.md  TEST-COVERAGE-BRANCH.md  merkle-tree-tests.md
docs/01-requirements/: decisions.md  open-questions.md
docs/01-requirements/features/: access-tokens.md  acls.md  bandwidth-throttling.md  batch-stat.md  case-insensitive.md  cert-auto-renewal.md  change-watches.md  compression.md  cross-share-dedup.md  erasure-coding.md  file-versioning.md  kernel-module.md  leases.md  merkle-fanout-config.md  multi-client.md  multi-server-striping.md  offline-mode.md  optimistic-cache.md  partial-writes.md  pluggable-backends.md  poc-scope.md  readdir-filter.md  readdir-plus-deferred.md  reconnect-sync.md  selective-sync.md  sparse-files.md  supplementary-groups.md  symlinks.md  write-dedup.md
docs/01-requirements/features/erasure-coding-exploration/: 01-overview.md  02-protocol-extensions.md  03-metadata-service.md  04-roadmap.md  05-architecture-diagrams.md  README.md
docs/02-protocol-design/: DECISION-CDC-PARAMETERS.md  comparison-coda.md  comparison-comprehensive.md  comparison-hpe-data-fabric.md  comparison-juicefs.md  comparison-lbfs.md  comparison-leilfs.md  comparison-nfs-smb.md  comparison-seafile.md  comparison-smb-over-quic.md  comparison-tahoe-lafs.md  decisions.md  directory-coherency-analysis.md  handle-design.md
docs/03-cli-design/: commands.md  config-storage-analysis.md
docs/04-security/: pairing.md  trust-model.md
docs/05-implementation/: QUIC-LIBRARY-ANALYSIS.md  crate-architecture.md  iroh-blobs-evaluation.md  metadata-storage-and-maintenance.md  technology-stack.md
docs/implementation-plans/: 2026-01-handle-cache-rewrite.md  2026-02-symlink-protocol.md
docs/investigations/: foyer-cache-investigation.md  foyer-cache-swot.md
docs/reviews/: reviewer-deepseek.md  reviewer-kimi.md  reviewer-opus.md
docs/reviews/v2/: CROSS-CUTTING-SUMMARY.md  arch-kimi.md  arch-opus.md  correctness-deepseek.md  correctness-kimi.md  correctness-opus.md  perf-kimi.md  perf-opus.md  security-deepseek.md  security-kimi.md  security-opus.md
docs/reviews/v3/: CROSS-CUTTING-SUMMARY.md  quality-deepseek.md  quality-kimi.md  quality-opus.md
docs/superpowers/plans/: 2026-04-21-hash-based-merkle-tree.md
docs/superpowers/specs/: 2026-04-20-delta-sync-merkle-tree-design.md  2026-04-20-hash-based-merkle-tree-design.md
proto/: common.proto  handshake.proto  notifications.proto  operations.proto  transfer.proto
scripts/: bench-read.sh
scripts/fio/: read-multi.fio  read-random-multi.fio  read-random.fio  read-sequential.fio  read-small-files.fio
