[workspace]
resolver = "2"
members = [
    "crates/rift-common",
    "crates/rift-protocol",
    "crates/rift-transport",
    "crates/rift-server",
    "crates/rift-client",
]

# FUSE support is part of rift-client (enabled by the "fuse" feature, on by default).
# It is Linux-only and requires FUSE to be installed:
# Linux: sudo apt install libfuse3-dev (Ubuntu/Debian) or sudo dnf install fuse3-devel (Fedora/RHEL)
# On other platforms the feature is silently disabled and no FUSE code is compiled.

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["Rift Contributors"]
repository = "https://github.com/yourusername/rift"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Correctness & bug prevention
unwrap_used = "deny"
expect_used = "allow"

# Complexity & readability
too_many_lines = "warn"
excessive_nesting = "warn"
cognitive_complexity = "warn"
similar_names = "warn"
fn_params_excessive_bools = "warn"

# API design & idioms
must_use_candidate = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"

# Error handling
question_mark = "warn"
if_then_some_else_none = "warn"

# Performance
clone_on_copy = "deny"
redundant_clone = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Key material zeroization
zeroize = { version = "1", features = ["derive"] }

# QUIC and TLS
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2"

# Protobuf
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# FUSE (git dependency — 0.9.0 on master fixes a docs.rs build issue)
fuse3 = { git = "https://github.com/Sherlock-Holo/fuse3", features = ["tokio-runtime", "unprivileged"] }
futures = "0.3"

# Hashing and CDC
blake3 = "1"
fastcdc = { version = "3", features = ["tokio"] }
hmac = "0.12"
sha2 = "0.10"

# Configuration and serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
bytes = "1"
async-trait = "0.1"
dirs = "5"

# UUID v7 handles
uuid = { version = "1", features = ["v7"] }

# Concurrent hash maps
scc = "3"

# Extended attributes
xattr = "1"
getrandom = "0.3"

# Low-level
libc = "0.2"

# Testing
proptest = "1"
rcgen = "0.13"
tempfile = "3"
