[package]
name = "rift-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rift-client"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
prost.workspace = true
async-trait.workspace = true
rcgen.workspace = true

rift-common = { path = "../rift-common" }
rift-protocol = { path = "../rift-protocol" }
rift-transport = { path = "../rift-transport" }

[target.'cfg(target_os = "linux")'.dependencies]
rift-fuse = { path = "../rift-fuse" }
fuser = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
rcgen.workspace = true
tokio = { workspace = true, features = ["test-util"] }
rift-server = { path = "../rift-server" }
