[package]
name = "rift-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
fastcdc.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
bytes.workspace = true
postcard = { version = "1", features = ["alloc"] }
libc = "0.2"
uuid.workspace = true
scc.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true
tokio.workspace = true
