[package]
name = "rift-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
