[package]
name = "rift-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rift-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
prost.workspace = true
prost-types.workspace = true
rcgen.workspace = true
rustls.workspace = true
dirs.workspace = true
tokio-rusqlite = "0.7"

rift-common = { path = "../rift-common" }
rift-protocol = { path = "../rift-protocol" }
rift-transport = { path = "../rift-transport" }

[dev-dependencies]
tempfile.workspace = true
rcgen.workspace = true
tokio = { workspace = true, features = ["test-util"] }
