[package]
name = "rift-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rift-server"
path = "src/main.rs"

[dependencies]
postcard = { version = "1", features = ["alloc"] }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
prost.workspace = true
prost-types.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
dirs.workspace = true
tokio-rusqlite = "0.7"
uuid.workspace = true
scc.workspace = true
xattr.workspace = true
walkdir = "2"
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"

rift-common = { path = "../rift-common" }
rift-protocol = { path = "../rift-protocol" }
rift-transport = { path = "../rift-transport" }
hmac.workspace = true
sha2.workspace = true
getrandom.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
rcgen.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["test-util"] }
