[package]
name = "rift-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
async-trait.workspace = true
blake3.workspace = true
prost.workspace = true

rift-protocol = { path = "../rift-protocol" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
rcgen.workspace = true
prost.workspace = true
